Flattend and darkened user interface

--- a/Ghidra/Features/Base/data/base.theme.properties
+++ b/Ghidra/Features/Base/data/base.theme.properties
@@ -1,6 +1,7 @@
 [Defaults]
 
 color.bg.undefined = color.palette.lightgray
+color.bg.console = color.bg
 
 color.flowtype.fall.through = color.palette.red
 color.flowtype.jump.conditional = color.palette.green
