--- a/Ghidra/Features/Decompiler/data/decompiler.theme.properties
+++ b/Ghidra/Features/Decompiler/data/decompiler.theme.properties
@@ -3,6 +3,9 @@
 color.bg.decompiler = color.bg
 color.fg.decompiler = color.fg
 
+color.bg.decompiler.margin = color.bg
+color.fg.decompiler.margin = color.fg
+
 color.fg.decompiler.keyword = color.palette.blue
 color.fg.decompiler.function.name = color.palette.blue
 color.fg.decompiler.comment = color.palette.blueviolet
