--- a/Ghidra/Features/FunctionGraph/data/functiongraph.theme.properties
+++ b/Ghidra/Features/FunctionGraph/data/functiongraph.theme.properties
@@ -1,6 +1,8 @@
 [Defaults]
 
 color.bg.plugin.functiongraph = color.bg
+color.bg.plugin.functiongraph.vertex = color.bg
+color.bg.plugin.functiongraph.vertex.border = color.bg.plugin.functiongraph.vertex
 
 color.fg.plugin.functiongraph.label.picked = color.fg
 color.fg.plugin.functiongraph.label.non.picked = color.fg.disabled
