--- a/Ghidra/Framework/Gui/data/gui.theme.properties
+++ b/Ghidra/Framework/Gui/data/gui.theme.properties
@@ -26,7 +26,7 @@ color.fg.table.uneditable.unselected = color.palette.lightgray
 color.fg.error.table.unselected = color.fg.error
 color.fg.error.table.selected = color.palette.lightpink
 
-color.bg.tree = [color]system.color.bg.view
+color.bg.tree = color.bg
 color.bg.tree.drag = color.palette.lavender
 color.bg.tree.selected = [color]system.color.bg.selected.view 
 color.fg.tree.selected = [color]system.color.fg.selected.view
