--- a/Ghidra/Features/Base/data/base.icons.theme.properties
+++ b/Ghidra/Features/Base/data/base.icons.theme.properties
@@ -41,7 +41,7 @@ icon.plugin.assembler.question = question_zero.png
 icon.plugin.bookmark.add = icon.check
 icon.plugin.bookmark.delete = icon.base.delete
 icon.plugin.bookmark.select = text_align_justify.png
-icon.plugin.bookmark.type.note = notes.gif
+icon.plugin.bookmark.type.note = modern_bookmarks.png
 icon.plugin.bookmark.type.info = icon.information
 icon.plugin.bookmark.type.warning = icon.warning
 icon.plugin.bookmark.type.error = icon.base.delete
