--- a/Ghidra/Framework/Gui/data/gui.theme.properties
+++ b/Ghidra/Framework/Gui/data/gui.theme.properties
@@ -100,16 +100,16 @@ icon.warning.strong = software-update-urgent.png
 icon.warning = warning.png
 icon.information = information.png
 
-icon.left = left.png
-icon.right = right.png
+icon.left = modern_arrow_back.png
+icon.right = modern_arrow_forward.png
 icon.up = up.png
 icon.down = down.png
 
 icon.left.alt = left.alternate.png
 icon.right.alt = right.alternate.png
 
-icon.save = disk.png
-icon.save.as = disk_save_as.png
+icon.save = modern_save.png
+icon.save.as = modern_save_as.png
 
 icon.make.selection = text_align_justify.png
 
